@@ -8,12 +8,16 @@ permissions:
 jobs:
   linux:
     runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
+      matrix:
+        python_version: [3.9.x, 3.11.x]
     timeout-minutes: 30
     steps:
     - uses: actions/checkout@v4
     - uses: actions/setup-python@v5
       with:
-        python-version: '3.11.x'
+        python-version: ${{ matrix.python_version }}
     - name: Setup Python
       run: |
         python3 -m pip install Cython numpy scipy matplotlib pytest setuptools==69.1.0
